# Multi-Agent-Orchestrator

./: .env.sample  .gitignore  README.md  interactive_manual_tester.py  pyproject.toml  pytest.ini  run_llm_tests.py  run_tests.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: main.js  style.css
frontend/src/components/ExecutionFlow/: ExecutionFlow.js  execution-flow.css
frontend/src/components/FinalResult/: FinalResult.js  final-result.css
frontend/src/components/InputForm/: InputForm.js  input-form.css
frontend/src/services/: apiService.js
frontend/src/styles/base/: reset.css  (+2 more)
frontend/src/utils/: api.js  dom.js  state.js
src/: main.py
src/agents/: code_agent.py  planning_agent.py  research_agent.py
src/api/: dependencies.py
src/api/routes/: health.py  workflow.py
src/config/: __init__.py  cleanup_config.py  cloud_config.py  model_environment.py  monitoring_config.py  ollama_config.py  redis_config.py  redis_saver.py  settings.py
src/core/: background_cleanup.py  exceptions.py  langfuse_langgraph_integration.py  langgraph_tracing.py  model_fallback.py  model_router.py  model_service.py  redis_state_manager.py  state_recovery.py  workflow_factory.py
src/core/llm_wrappers/: __init__.py  base_llm.py  huggingface_llm.py  llm_factory.py  monitored_llm.py  ollama_llm.py  openai_llm.py  throttled_ollama_llm.py  vllm_llm.py
src/core/monitoring/: mlflow.py  model_monitor.py
src/graph/: state.py  workflow.py
src/services/: base.py  langfuse_service.py
src/tools/: browser_tools.py  code_interpreter.py  test_code_interpreter.py
src/utils/: logging_config.py
tests/: conftest.py
tests/fixtures/: mock_responses.json  sample_requests.json
tests/integration/: run_model_router_tests.py  run_redis_cleanup_tests.py  test_api_integration.py  test_mocks.py  test_model_router_integration.py  test_model_service_integration.py  test_ollama_integration.py  test_redis_cleanup_integration.py  test_redis_state_recovery.py  test_workflow.py  test_workflow_integration.py
tests/integration/llm_integration/: QUICK_START.md  __init__.py  check_test_readiness.py  conftest.py  run_llm_integration_tests.py  run_monitoring_test.py  test_cloud_integration.py  test_config.py  test_llm_integration.py  test_monitoring_integration.py  test_ollama_integration.py
tests/unit/: test_redis_cleanup.py
tests/unit/test_core/: test_model_fallback.py  test_model_router.py  test_model_service.py
tests/unit/test_graph/: test_state.py
tests/unit/test_tools/: test_code_interpreter.py
(+10 files in other folders)
