[tool.poetry]
name = "multi-agent-orchestrator"
version = "0.1.0"
description = "A distributed multi-agent task orchestration system"
readme = "README.md"
packages = [
    { include = "agents", from = "src" },
    { include = "graph", from = "src" },
    { include = "tools", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.5"
langgraph = "^0.0.69"
langchain_openai = "^0.1.8"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
redis = "^5.0.7"
python-dotenv = "^1.0.1"
langchainhub = "^0.1.20"
tavily-python = "^0.3.3"
duckduckgo-search = "^6.1.8"
langchain-community = "^0.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.main:api"