[tool.poetry]
name = "multi-agent-orchestrator"
version = "0.1.0"
description = "Multi-agent task orchestration system"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.5"
langgraph = "^0.0.69"
langchain_openai = "^0.1.8"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
redis = "^5.0.7"
python-dotenv = "^1.0.1"
langchainhub = "^0.1.20"
tavily-python = "^0.3.3"
duckduckgo-search = "^6.1.8"
langchain-community = "^0.2.5"
langchain-experimental = "^0.0.65"
docker = "^7.1.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
structlog = "^23.2.0"
psutil = "^5.9.6"
apscheduler = "^3.10.4"
aiohttp = "^3.9.0"
nest-asyncio = "^1.5.8"
setuptools = "^80.9.0"
langfuse = "^3.2.4"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
httpx = "^0.25.2"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"
ruff = "^0.0.287"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry:api"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "unit: marks tests as unit tests",
    "slow: marks tests as slow running"
]
addopts = "-v --tb=short"